--- a/app/core/templates/core/blendschedules/allschedules.html
+++ b/app/core/templates/core/blendschedules/allschedules.html
@@ -28,16 +28,16 @@
                         </thead>
                         {% for item in horix_blends %}
                             <tr>
-                                <td>{{ item.pn }}</td>
-                                <td>{{ item.po_field }}</td>
                                 <td>{{ item.item_code }}</td>
-                                <td>{{ item.item_description }}</td>
+                                <td>{{ item.purchase_order_number }}</td>
+                                <td>{{ item.component_item_code }}</td>
+                                <td>{{ item.component_item_description }}</td>
                                 <td>{{ item.gallonqty }}</td>
                                 <td>{{ item.num_blends }}</td>
                                 <td>{{ item.run_date|date:"M d, Y" }}</td>
                                 <td class="text-center lotNumCell">
 
-                                    <button class="btn btn-secondary lotNumButton" data-bs-toggle="modal" data-bs-target="#addLotNumModal" data-line="Hx" data-rundate="{{ item.run_date|date:"m/d/Y" }}" data-itemcode="{{ item.item_code }}" data-desc="{{ item.component_item_description }}" data-desk="{{ item.desk }}" data-threewkqty="{{ item.gallonqty }}">+</button>
+                                    <button class="btn btn-secondary lotNumButton" data-bs-toggle="modal" data-bs-target="#addLotNumModal" data-line="Hx" data-rundate="{{ item.run_date|date:"m/d/Y" }}" data-itemcode="{{ item.component_item_code }}" data-desc="{{ item.component_item_description }}" data-desk="{{ item.desk }}" data-threewkqty="{{ item.gallonqty }}">+</button>
 
                                 </td>
                             </tr>
@@ -77,15 +77,15 @@
                     </thead>
                     {% for item in drum_blends %}
                         <tr>
-                            <td>{{ item.pn }}</td>
-                            <td>{{ item.po_field }}</td>
                             <td>{{ item.item_code }}</td>
-                            <td>{{ item.product }}</td>
+                            <td>{{ item.purchase_order_number }}</td>
+                            <td>{{ item.component_item_code }}</td>
+                            <td>{{ item.component_item_description }}</td>
                             <td>{{ item.gallonqty }}</td>
                             <td>{{ item.num_blends }}</td>
                             <td>{{ item.run_date|date:"M d, Y" }}</td>
                             <td class="text-center lotNumCell">
-                                <button class="btn btn-secondary lotNumButton" data-bs-toggle="modal" data-desk="{{ item.desk }}" data-bs-target="#addLotNumModal" data-line="Dm" data-rundate="{{ item.run_date }}" data-itemcode="{{ item.item_code }}" data-desc="{{ item.component_item_description }}" data-threewkqty="{{ item.gallonqty }}">+</button>
+                                <button class="btn btn-secondary lotNumButton" data-bs-toggle="modal" data-desk="{{ item.desk }}" data-bs-target="#addLotNumModal" data-line="Dm" data-rundate="{{ item.run_date }}" data-itemcode="{{ item.component_item_code }}" data-desc="{{ item.component_item_description }}" data-threewkqty="{{ item.gallonqty }}">+</button>
                             </td>
                         </tr>
                     {% endfor %}
@@ -125,15 +125,15 @@
                     </thead>
                     {% for item in tote_blends %}
                         <tr>
-                            <td>{{ item.pn }}</td>
-                            <td>{{ item.po_field }}</td>
                             <td>{{ item.item_code }}</td>
-                            <td>{{ item.product }}</td>
+                            <td>{{ item.purchase_order_number }}</td>
+                            <td>{{ item.component_item_code }}</td>
+                            <td>{{ item.component_item_description }}</td>
                             <td>{{ item.gallonqty }}</td>
                             <td>{{ item.num_blends }}</td>
                             <td>{{ item.run_date|date:"M d, Y" }}</td>
                             <td class="text-center lotNumCell">
-                                <button class="btn btn-secondary lotNumButton" data-desk="{{ item.desk }}" data-bs-toggle="modal" data-bs-target="#addLotNumModal" data-line="Totes" data-rundate="{{ item.run_date }}" data-itemcode="{{ item.item_code }}" data-desc="{{ item.component_item_description }}" data-threewkqty="{{ item.gallonqty }}">+</button>
+                                <button class="btn btn-secondary lotNumButton" data-desk="{{ item.desk }}" data-bs-toggle="modal" data-bs-target="#addLotNumModal" data-line="Totes" data-rundate="{{ item.run_date }}" data-itemcode="{{ item.component_item_code }}" data-desc="{{ item.component_item_description }}" data-threewkqty="{{ item.gallonqty }}">+</button>
                             </td>
                         </tr>
                     {% endfor %}
@@ -172,15 +172,15 @@
                         </thead>
                         {% for item in pail_blends %}
                             <tr>
-                                <td>{{ item.pn }}</td>
-                                <td>{{ item.po_field }}</td>
                                 <td>{{ item.item_code }}</td>
-                                <td>{{ item.product }}</td>
+                                <td>{{ item.purchase_order_number }}</td>
+                                <td>{{ item.component_item_code }}</td>
+                                <td>{{ item.component_item_description }}</td>
                                 <td>{{ item.gallonqty }}</td>
                                 <td>{{ item.num_blends }}</td>
                                 <td>{{ item.run_date|date:"M d, Y" }}</td>
                                 <td class="text-center lotNumCell">
-                                    <button class="btn btn-secondary lotNumButton" data-bs-toggle="modal" data-bs-target="#addLotNumModal" data-rundate="{{ item.run_date }}" data-line="Pails" data-itemcode="{{ item.item_code }}" data-desc="{{ item.component_item_description }}" data-threewkqty="{{ item.gallonqty }}">+</button>
+                                    <button class="btn btn-secondary lotNumButton" data-bs-toggle="modal" data-bs-target="#addLotNumModal" data-rundate="{{ item.run_date }}" data-line="Pails" data-itemcode="{{ item.component_item_code }}" data-desc="{{ item.component_item_description }}" data-threewkqty="{{ item.gallonqty }}">+</button>
                                 </td>
                             </tr>
                         {% endfor %}
@@ -220,7 +220,7 @@
                     </thead>
                     {% for item in desk_one_blends %}
                         <tr>
-                            <td>{{ item.component_item_code }}</td>
+                            <td>{{ item.item_code }}</td>
                             <td>{{ item.item_description }}</td>
                             <td>{{ item.lot }}</td>
                             <td>{{ item.quantity|floatformat:1 }} gal</td>
@@ -282,7 +282,7 @@
                     </thead>
                     {% for item in desk_two_blends %}
                         <tr>
-                            <td>{{ item.component_item_code }}</td>
+                            <td>{{ item.item_code }}</td>
                             <td>{{ item.item_description }}</td>
                             <td>{{ item.lot }}</td>
                             <td>{{ item.quantity|floatformat:1 }} gal</td>
