--- a/app/core/templates/core/blendschedules/drumschedule.html
+++ b/app/core/templates/core/blendschedules/drumschedule.html
@@ -22,15 +22,15 @@
             </thead>
             {% for item in drum_blends %}
                 <tr>
-                    <td>{{ item.pn }}</td>
-                    <td>{{ item.po_field }}</td>
-                    <td>{{ item.blend }}</td>
-                    <td>{{ item.product }}</td>
+                    <td>{{ item.item_code }}</td>
+                    <td>{{ item.purchase_order_number }}</td>
+                    <td>{{ item.component_item_code }}</td>
+                    <td>{{ item.component_item_description }}</td>
                     <td>{{ item.gallonqty }}</td>
                     <td>{{ item.num_blends }}</td>
                     <td>{{ item.run_date|date:"M d, Y" }}</td>
                     <td class="text-center lotNumCell">
-                        <button class="btn btn-secondary lotNumButton" data-desk="{{ item.desk }}" data-bs-toggle="modal" data-bs-target="#addLotNumModal" data-line="Dm" data-rundate="{{ item.run_date }}" data-itemcode="{{ item.item_code }}" data-desc="{{ item.component_item_description }}" data-threewkqty="{{ item.gallonqty }}">+</button>
+                        <button class="btn btn-secondary lotNumButton" data-desk="{{ item.desk }}" data-bs-toggle="modal" data-bs-target="#addLotNumModal" data-line="Dm" data-rundate="{{ item.run_date }}" data-itemcode="{{ item.component_item_code }}" data-desc="{{ item.item_description }}" data-threewkqty="{{ item.gallonqty }}">+</button>
                     </td>
                 </tr>
             {% endfor %}
