Correct issues in blendshortages.

--- a/app/core/templates/core/testpage.html
+++ b/app/core/templates/core/testpage.html
@@ -1,120 +1,11 @@
 {% extends 'base.html' %}
 {% load static %}
 
-{% block title %}<title>Chemical Shortages</title>{% endblock %}
+{% block title %}<title>TestPage</title>{% endblock %}
 
 {% block content %}
-
-    {% if is_shortage %}
-        <div class="text-center header-div">
-            <h1>All Upcoming Chemical Shortages</h1>
-            <br/><br/> 
-        </div>
-
-        <div class="table-responsive-sm">
-            <table class="table text-left table-bordered">
-                <thead class="thead-dark" style="position: sticky; top: 55px; z-index: 2 !important;">
-                    <tr>
-                        <th scope="col" class='text-center'>Blend PN</th>
-                        <th scope="col" class='text-center'>Blend Description</th>
-                        <th scope="col" class='text-center'>Total Blend Required</th>
-                        <th scope="col" class='text-center'>Chem PN</th>
-                        <th scope="col" class='text-center'>Chem Description</th>
-                        <th scope="col" class='text-center'>Chem Required</th>
-                        <th scope="col" class='text-center'>Chem On Hand</th>
-                        <th scope="col" class='text-center'>Chem Shortage</th>
-                        <th scope="col" class='text-center'>Max Possible Blend</th>
-                        <th scope="col" class='text-center'>Next Delivery</th>
-                        <th scope="col" class='text-center'></th>
-                    </tr>
-                </thead>
-                {% for item in chems_used_upcoming %}
-                    {% if item.oh_minus_required < 0 and item.component_item_code != "030143" %}
-                    <tr>
-                        <td style="vertical-align: middle;">{{ item.item_code }}</td>
-                        <td style="vertical-align: middle;">{{ item.item_description }}</td>
-                        <td style="vertical-align: middle;">{{ item.blend_req_threewk|floatformat:0 }} gal</td>
-                        <td style="vertical-align: middle;">{{ item.component_item_code }}</td>
-                        <td style="vertical-align: middle;">{{ item.component_item_description }}</td>
-                        <td style="vertical-align: middle;">{{ item.required_qty|floatformat:2 }} {{ item.standard_uom }}</td>
-                        <td style="vertical-align: middle;">{{ item.qtyonhand|floatformat:2 }} {{ item.standard_uom }}</td>
-                        <td style="vertical-align: middle;">{{ item.oh_minus_required|floatformat:2 }}</td>
-                        <td style="vertical-align: middle;">{{ item.max_possible_blend|floatformat:0 }} gal</td>
-                        <td style="vertical-align: middle;" width="130px">{{ item.next_delivery|date:"M d, Y" }}</td>
-                        <td style="vertical-align: middle;" class='text-center'>
-                            <a href="/core/reports/Chem-Shortage/{{ item.component_item_code }}">
-                                <button class="btn btn-secondary" disabled="True">View Runs</button>
-                            </a>
-                        </td>
-                    </tr>
-                    {% endif %}
-                {% endfor %}
-            </table>
-        </div>
-    {% else %}
-        <div class="text-center header-div">
-            <h1>No Chemical Shortages Upcoming</h1>
-            <br/><br/>
-        <div class="animation" style="display:none;"><img src="{% static 'core/media/loading-gif.gif' %}" height="20" width="20"></img></div>
-            <h3>
-                <em>Usage detailed below:</em>
-            </h3>
-        </div>
-
-        <div class="table-responsive-sm">
-            <table class="table text-left table-bordered">
-                <thead class="thead-dark">
-                    <tr>
-                        <th scope="col" class='text-center'>Blend PN</th>
-                        <th scope="col" class='text-center'>Blend Description</th>
-                        <th scope="col" class='text-center'>Total Blend Required</th>
-                        <th scope="col" class='text-center'>Chem PN</th>
-                        <th scope="col" class='text-center'>Chem Description</th>
-                        <th scope="col" class='text-center'>Chem Required</th>
-                        <th scope="col" class='text-center'>Chem On Hand</th>
-                        <th scope="col" class='text-center'>On Hand After Runs</th>
-                        <th scope="col" class='text-center'>Max Possible Blend</th>
-                        <th scope="col" class='text-center'>Next Delivery</th>
-                        <th scope="col" class='text-center'></th>
-                    </tr>
-                </thead>
-                {% for item in current_page.object_list %}
-                    {% if item.component_item_code != "030143" %}
-                    <tr>
-                        <td style="vertical-align: middle;">{{ item.item_code }}</td>
-                        <td style="vertical-align: middle;">{{ item.item_description }}</td>
-                        <td style="vertical-align: middle;">{{ item.blend_req_threewk|floatformat:0 }} gal</td>
-                        <td style="vertical-align: middle;">{{ item.component_item_code }}</td>
-                        <td style="vertical-align: middle;">{{ item.component_item_description }}</td>
-                        <td style="vertical-align: middle;">{{ item.required_qty|floatformat:2 }} {{ item.standard_uom }}</td>
-                        <td style="vertical-align: middle;">{{ item.qtyonhand|floatformat:2 }} {{ item.standard_uom }}</td>
-                        <td style="vertical-align: middle;">{{ item.oh_minus_required|floatformat:2 }} {{ item.standard_uom }}</td>
-                        <td style="vertical-align: middle;">{{ item.max_possible_blend|floatformat:0 }} gal</td>
-                        <td style="vertical-align: middle;" width="130px">{{ item.next_delivery|date:"M d, Y" }}</td>
-                        <td style="vertical-align: middle;" class='text-center'>
-                            <a href="/core/reports/Chem-Shortage/{{ item.component_item_code }}">
-                                <button class="btn btn-secondary" disabled="True">View Runs</button>
-                            </a>
-                        </td>
-                    </tr>
-                    {% endif %}
-                {% endfor %}
-            </table>
-        </div>
-        <div class='text-center'>
-            <div id="page-links">
-                {% if current_page.has_previous %}
-                    <a href="/core/chemshortages/?page={{ current_page.previous_page_number }}">Previous Page</a>
-                {% endif %}
-                {% if current_page.has_next %}
-                    <a href="/core/chemshortages/?page={{ current_page.next_page_number }}">Next Page</a>
-                {% endif %}
-            </div>
-            <div>
-                Page {{ current_page.number }} of {{ current_page.paginator.num_pages }}
-            </div>
-        </div>
-
-    {% endif %}
+hewwo :3
+    {{ desk_one_queryset }}
+    {{ desk_two_queryset }}
 
 {% endblock content %}
