--- a/app/core/templates/core/inventorycounts/countlist.html
+++ b/app/core/templates/core/inventorycounts/countlist.html
@@ -68,5 +68,5 @@
 
 {% block belowdeckscripts %}
     <script src="{% static 'core/js/countList.js' %}"></script>
-    <script src="{% static 'core/js/descriptionLookup.js' %}"></script>
+    <script src="{% static 'core/js/descLookup.js' %}"></script>
 {% endblock %}
