--- a/app/core/templates/core/lotnumrecords.html
+++ b/app/core/templates/core/lotnumrecords.html
@@ -186,6 +186,7 @@
 
 {% block belowdeckscripts %}
     <script src="{% static 'core/js/lotNumRecordUI.js' %}"></script>
+    <script src="{% static 'core/js/lotNumModal.js' %}"></script>
     {% if load_edit_modal %}
         <script>
             $(document).ready(function(){
