--- a/app/core/templates/core/lotnumform.html
+++ b/app/core/templates/core/lotnumform.html
@@ -34,5 +34,5 @@
 {% endblock content %}
 
 {% block belowdeckscripts %}
-    <script src="{% static 'core/js/descriptionLookup.js' %}"></script>
+    <script src="{% static 'core/js/lotNumModal.js' %}"></script>
 {% endblock %}
