--- a/app/core/templates/core/modals/lotnum-add-modal.html
+++ b/app/core/templates/core/modals/lotnum-add-modal.html
@@ -28,9 +28,9 @@
     </div>
     </div>
 </div>
-<script src="{% static 'core/js/descriptionLookup.js' %}"></script>
+<script src="{% static 'core/js/lotNumModal.js' %}"></script>
 <script>
     $(document).ready(function(){
-        $("#id_lot_number").prop('readonly', true)
+        $("#id_newLotModal_lot_number").prop('readonly', true)
     });
 </script>
