--- a/app/core/templates/core/lotnumrecords.html
+++ b/app/core/templates/core/lotnumrecords.html
@@ -28,10 +28,10 @@
     </div>
     
 
-    {% include 'core/modals/lotnum-add-modal.html' %}
-    {% include 'core/modals/lotnum-edit-modal.html' %}
-    {% include 'core/modals/lotnum-confirm-modal.html' %}
-    {% include 'core/modals/schedule-addlot-modal.html' %}
+    {% include 'core/modals/add-lotnum-modal.html' %}
+    {% include 'core/modals/edit-lotnum-modal.html' %}
+    {% include 'core/modals/delete-lotnum-modal.html' %}
+    {% include 'core/modals/add-scheduleitem-modal.html' %}
 
     <br/><br/>
     <div class="table-responsive-sm">
@@ -129,7 +129,7 @@
                                     <i class="fas fa-edit" disabled="disabled"></i>
                                 </button>
                             </a>
-                            <button dataItemID="{{ item.id }}" style="margin-right: 5px;" type="button" class="btn btn-outline-primary duplicateBtn" data-bs-toggle="modal" data-lotqty="{{ item.lot_quantity }}" data-rundate="{{ item.run_date|date:"m/d/Y" }}" data-desc="{{ item.description }}" data-itemcode="{{ item.item_code }}" data-desk="{{ item.desk }}"  data-line="{{ item.line }}" data-bs-target="#addLotNumModal">
+                            <button dataItemID="{{ item.id }}" style="margin-right: 5px;" type="button" class="btn btn-outline-primary duplicateBtn" data-bs-toggle="modal" data-lotqty="{{ item.lot_quantity }}" data-rundate="{{ item.run_date|date:"m/d/Y" }}" data-desc="{{ item.item_description }}" data-itemcode="{{ item.item_code }}" data-desk="{{ item.desk }}"  data-line="{{ item.line }}" data-bs-target="#addLotNumModal">
                                 <i class="far fa-clone" disabled="disabled"></i>
                             </button>
                             <button dataItemID="{{ item.id }}" type="button" class="btn btn-outline-danger deleteBtn" data-bs-toggle="modal" data-bs-target="#lotNumConfirmModal">
@@ -185,7 +185,8 @@
 
 
 {% block belowdeckscripts %}
-    <script src="{% static 'core/js/lotNumRecordUI.js' %}"></script>
+    <script type="module" src="{% static 'core/js/objects/modalObjects.js' %}"></script>
+    <script type="module" src="{% static 'core/js/lotNumRecordUI.js' %}"></script>
     <script src="{% static 'core/js/lotNumModal.js' %}"></script>
     {% if load_edit_modal %}
         <script>
