--- a/app/core/templates/core/lookuppages/lookuplocation.html
+++ b/app/core/templates/core/lookuppages/lookuplocation.html
@@ -34,5 +34,8 @@
   {% endblock content %}
 <!-- End Body -->
 {% block belowdeckscripts %}
-    <script src="{% static 'core/js/locationLookup.js' %}"></script>
+    <script type="module" src="{% static 'core/js/requestFunctions/requestFunctions.js' %}"></script>
+    <script type="module" src="{% static 'core/js/uiFunctions/uiFunctions.js' %}"></script>
+    <script type="module" src="{% static 'core/js/objects/lookupFormObjects.js' %}"></script>
+    <script type="module" src="{% static 'core/js/locationLookup.js' %}"></script>
 {% endblock %}
