Rename files as needed and create more modal objects.

--- a/app/core/templates/core/blendschedule.html
+++ b/app/core/templates/core/blendschedule.html
@@ -28,5 +28,5 @@
 {% endblock content %}
 
 {% block belowdeckscripts %}
-    <script src="{% static 'core/js/blendSchedule.js' %}"></script>
+    <script type="module" src="{% static 'core/js/pageModules/blendSchedule.js' %}"></script>
 {% endblock %}
