--- a/app/core/templates/core/inventorycounts/countlist.html
+++ b/app/core/templates/core/inventorycounts/countlist.html
@@ -67,6 +67,6 @@
 
 
 {% block belowdeckscripts %}
-    <script src="{% static 'core/js/countList.js' %}"></script>
-    <script src="{% static 'core/js/descLookup.js' %}"></script>
+    <script type="module" src="{% static 'core/js/pageModules/countList.js' %}"></script>
+    
 {% endblock %}
