--- a/app/core/templates/core/modals/add-countlistitem-modal.html
+++ b/app/core/templates/core/modals/add-countlistitem-modal.html
@@ -1,8 +1,8 @@
-<div class="modal fade" id="addBlendModal" tabindex="-1" aria-labelledby="addBlendModalLabel" aria-hidden="true">
+<div class="modal fade" id="addCountListItemModal" tabindex="-1" aria-labelledby="addCountListItemModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content">
         <div class="modal-header">
-            <h5 class="modal-title" id="addBlendModalLabel">Add Blend</h5>
+            <h5 class="modal-title" id="addCountListItemModalLabel">Add CountList Item</h5>
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div id="searchDivContainer">
