--- a/app/core/templates/core/lotnumrecords.html
+++ b/app/core/templates/core/lotnumrecords.html
@@ -22,7 +22,7 @@
                 </a>
             {% endif %}
             <button id="batchDeleteButton" class="btn btn-outline-danger" style="display:none;" data-bs-toggle="modal" data-bs-target="#lotNumConfirmModal">
-                Delete Counts
+                Delete Lots
             </button>
         {% endif %}
     </div>
@@ -186,8 +186,8 @@
 
 {% block belowdeckscripts %}
     <script type="module" src="{% static 'core/js/objects/modalObjects.js' %}"></script>
-    <script type="module" src="{% static 'core/js/lotNumRecordUI.js' %}"></script>
-    <script src="{% static 'core/js/lotNumModal.js' %}"></script>
+    <script type="module" src="{% static 'core/js/pageModules/lotNumRecordUI.js' %}"></script>
+    {% comment %} <script src="{% static 'core/js/lotNumModal.js' %}"></script> {% endcomment %}
     {% if load_edit_modal %}
         <script>
             $(document).ready(function(){
