--- a/app/core/templates/core/modals/delete-countrecord-modal.html
+++ b/app/core/templates/core/modals/delete-countrecord-modal.html
@@ -1,17 +1,17 @@
-<div class="modal fade" id="countRecordConfirmModal" tabindex="-1" aria-labelledby="countRecordsConfirmModalLabel" aria-hidden="true">
+<div class="modal fade" id="deleteCountRecordsModal" tabindex="-1" aria-labelledby="deleteCountRecordsModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content">
         <div class="modal-header">
-            <h5 class="modal-title" id="countRecordsConfirmModalLabel">Confirm Deletion</h5>
+            <h5 class="modal-title" id="deleteCountRecordsModalLabel">Confirm Deletion</h5>
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
-        <div class="modal-body" id="countRecordsConfirmModalBody">
+        <div class="modal-body" id="deleteCountRecordsModalBody">
             Are you sure you want to delete this record?
         </div>
         <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-            <a id="modalButtonLink" href="/core/delete_countrecord/{{ item.id }}">
-                <button type="button" class="btn btn-outline-danger" id="modalButton">Delete</button>
+            <a id="deleteModalButtonLink" href="">
+                <button type="button" class="btn btn-outline-danger" id="deleteModalButton">Delete</button>
             </a>
         </div>
     </div>
