--- a/app/core/templates/core/modals/delete-lotnum-modal.html
+++ b/app/core/templates/core/modals/delete-lotnum-modal.html
@@ -1,17 +1,17 @@
-<div class="modal fade" id="lotNumConfirmModal" tabindex="-1" aria-labelledby="lotNumConfirmModalLabel" aria-hidden="true">
+<div class="modal fade" id="deleteLotNumModal" tabindex="-1" aria-labelledby="deleteLotNumModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content">
         <div class="modal-header">
-            <h5 class="modal-title" id="lotNumConfirmModalLabel"></h5>
+            <h5 class="modal-title" id="deleteLotNumModalLabel"></h5>
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
-        <div class="modal-body" id="lotNumConfirmModalBody">
+        <div class="modal-body" id="deleteLotNumModalBody">
             Are you sure you want to delete this record?
         </div>
         <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-            <a id="confirmModalButtonLink" href="/core/delete_lot_num_record/">
-                <button type="button" class="btn btn-outline-danger" id="confirmModalButton"></button>
+            <a id="deleteLotNumModalButtonLink" href="/core/delete_lot_num_record/">
+                <button type="button" class="btn btn-outline-danger" id="deleteLotNumModalButton"></button>
             </a>
         </div>
     </div>
