--- a/app/core/templates/core/inventorycounts/countrecords.html
+++ b/app/core/templates/core/inventorycounts/countrecords.html
@@ -8,10 +8,10 @@
         <h1>Full Count History</h1>
         <br/><br/>
         <button id="createReportButton" class="btn btn-secondary" style="display:none;">Count Report</button>
-        <button id="batchEditButton" class="btn btn-primary" style="display:none;" data-bs-toggle="modal" data-bs-target="#countRecordConfirmModal">
+        <button id="batchEditButton" class="btn btn-primary" style="display:none;" data-bs-toggle="modal" data-bs-target="#editCountRecordsModal">
             Edit Counts
         </button>
-        <button id="batchDeleteButton" class="btn btn-outline-danger" style="display:none;" data-bs-toggle="modal" data-bs-target="#countRecordConfirmModal">
+        <button id="batchDeleteButton" class="btn btn-outline-danger" style="display:none;" data-bs-toggle="modal" data-bs-target="#deleteCountRecordsModal">
             Delete Counts
         </button>
         <br/><br/>
