--- a/app/core/templates/core/modals/delete-countrecord-modal.html
+++ b/app/core/templates/core/modals/delete-countrecord-modal.html
@@ -10,8 +10,8 @@
         </div>
         <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
-            <a id="deleteModalButtonLink" href="">
-                <button type="button" class="btn btn-outline-danger" id="deleteModalButton">Delete</button>
+            <a id="deleteCountRecordsModalButtonLink" href="">
+                <button type="button" class="btn btn-outline-danger" id="deleteCountRecordsModalButton">Delete</button>
             </a>
         </div>
     </div>
