Set up additional page and modal objects.

--- a/app/core/templates/core/lookuppages/lookuplotnums.html
+++ b/app/core/templates/core/lookuppages/lookuplotnums.html
@@ -34,5 +34,5 @@
 <!-- End Body -->
 
 {% block belowdeckscripts %}
-    <script src="{% static 'core/js/lotNumLookup.js' %}"></script>
+    <script type="module" src="{% static 'core/js/pageModules/lotNumLookup.js' %}"></script>
 {% endblock %}
