--- a/app/core/templates/core/reportcenter.html
+++ b/app/core/templates/core/reportcenter.html
@@ -62,7 +62,6 @@
     
     <p id="warningParagraph" style="display: none;"><em>Incomplete or invalid search term.</em></p>
 
-<script src="{% static 'core/js/reportCenterUI.js' %}"></script>
-
+<script type="module" src="{% static 'core/js/pageModules/reportCenter.js' %}"></script>
 
 {% endblock content %}
