Timestamp & format countlist page for printing.

--- a/app/core/static/core/css/countlist.css
+++ b/app/core/static/core/css/countlist.css
@@ -142,4 +142,8 @@ td[class*="counted_quantity"]{
     tr {
         border: solid 1px black;
     }
+
+    .noPrint {
+        display: none !important;
+    }
 }
