Update noPrint styling on countlist.

--- a/app/core/templates/core/inventorycounts/countlist.html
+++ b/app/core/templates/core/inventorycounts/countlist.html
@@ -47,7 +47,7 @@
                 {% endfor %}
             </form>
         </div>
-        <div class="text-center buttonContainer">
+        <div class="text-center buttonContainer noPrint">
             <button type="submit" name="submit" class="btn btn-secondary" id="saveCountsButton">Save Counts</button>
             <a class="discardButton" href="/core/delete_countrecord/countrecords/{{ encoded_list }}/{{ encoded_list }}">
                 Delete All
