--- a/app/core/templates/core/modals/delete-lotnum-modal.html
+++ b/app/core/templates/core/modals/delete-lotnum-modal.html
@@ -2,16 +2,18 @@
     <div class="modal-dialog modal-dialog-centered">
     <div class="modal-content">
         <div class="modal-header">
-            <h5 class="modal-title" id="deleteLotNumModalLabel"></h5>
+            <h5 class="modal-title" id="deleteLotNumModalLabel">Confirm Deletion</h5>
             <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body" id="deleteLotNumModalBody">
-            Are you sure you want to delete this record?
+            <p id="deleteLotNumModalQuestion">Are you sure you want to delete this record?</p>
+            <br>
+            <b>This action cannot be undone.</b>
         </div>
         <div class="modal-footer">
             <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancel</button>
             <a id="deleteLotNumModalButtonLink" href="/core/delete_lot_num_record/">
-                <button type="button" class="btn btn-outline-danger" id="deleteLotNumModalButton"></button>
+                <button type="button" class="btn btn-outline-danger" id="deleteLotNumModalButton">Delete</button>
             </a>
         </div>
     </div>
