--- a/app/core/templates/core/blendshortages.html
+++ b/app/core/templates/core/blendshortages.html
@@ -14,11 +14,15 @@
     {% if foam_factor_is_populated %}
         <div class='text-center'>
             <h1>Blend Shortages</h1>
-            <br/><br/> 
+            <br/>
+            <button id="create_list" style="display:none">Create Count List</button>
+            <br/> 
+            <br/> 
         </div>
         <table class="table text-left table-bordered table-hover">
             <thead class="thead-dark" style="position: sticky; top: 55px; z-index: 2 !important;">
                 <tr>
+                    <th scope="col" class="text-center"></th>
                     <th scope="col" class="text-center">Blend</th>
                     <th scope="col" class="text-center">Description</th>
                     <th scope="col" class="text-center">Last Count</th>
@@ -34,6 +38,9 @@
             </thead>
             {% for item in blend_these_queryset %}
                 <tr {% if item.item_code == "602037" or item.item_code == "602602" %}class="msrRow"{% endif %}{% if item.needs_count %}needsCount="needsCount"{% endif %}>
+                    <td class='text-center'>
+                        <input type="checkbox" name={{ item.component_item_code }}></input>
+                    </td>
                     <td>
                         <span title="{{ item.ingredients_list }}">
                             <div class="dropdown">
