Change display_blend_schedule to take parameters.

--- a/app/core/templates/core/blendschedules/deskoneschedule.html
+++ b/app/core/templates/core/blendschedules/deskoneschedule.html
@@ -3,9 +3,9 @@
     <br>
     <p>{{ today|date:"m/d/y" }}</p>
     <div class="noPrint">
-        <a href="/core/blendschedule/Desk_2">View Desk 2 Schedule</a>
+        <a href="/core/blendschedule?blend_area=Desk_2">View Desk 2 Schedule</a>
         -- 
-        <a href="/core/blendschedule/all">View All Schedules</a>
+        <a href="/core/blendschedule?blend_area=all">View All Schedules</a>
         <br>
     </div>
 </div>
