--- a/app/core/templates/core/lotnumrecords.html
+++ b/app/core/templates/core/lotnumrecords.html
@@ -120,7 +120,7 @@
                                     </ul>
                                 </div>
                             {% else %}
-                                <b><a href="/core/blendschedule/{{ item.schedule_value }}">{{ item.schedule_value }}</a></b>
+                                <b><a href="/core/blendschedule?blend_area={{ item.schedule_value }}">{{ item.schedule_value }}</a></b>
                             {% endif %}
                         </td>
                         <td style="display:flex;">
