--- a/app/core/templates/core/blendschedules/allschedules.html
+++ b/app/core/templates/core/blendschedules/allschedules.html
@@ -11,7 +11,7 @@
     <div id="collapseOne" class="accordion-collapse collapse" aria-labelledby="headingOne" data-bs-parent="#accordionExample">
         <div class="accordion-body">
             {% if horix_blends %}
-                <a href="/core/blendschedule/Hx">View Horix Schedule Page</a>
+                <a href="/core/blendschedule?blend_area=Hx">View Horix Schedule Page</a>
                 <div class="table-responsive-sm">
                     <table class="table text-left table-bordered">
                         <thead class="thead-dark">
@@ -60,7 +60,7 @@
     <div id="collapseTwo" class="accordion-collapse collapse" aria-labelledby="headingTwo" data-bs-parent="#accordionExample">
         <div class="accordion-body">
         {% if drum_blends %}
-            <a href="/core/blendschedule/Dm">View Drum Schedule Page</a>
+            <a href="/core/blendschedule?blend_area=Dm">View Drum Schedule Page</a>
             <div class="table-responsive-sm">
                 <table class="table text-left table-bordered">
                     <thead class="thead-dark">
@@ -108,7 +108,7 @@
     <div id="collapseThree" class="accordion-collapse collapse" aria-labelledby="headingThree" data-bs-parent="#accordionExample">
         <div class="accordion-body">
         {% if tote_blends %}
-            <a href="/core/blendschedule/Totes">View Totes Schedule Page</a>
+            <a href="/core/blendschedule?blend_area=Totes">View Totes Schedule Page</a>
             <div class="table-responsive-sm">
                 <table class="table text-left table-bordered">
                     <thead class="thead-dark">
@@ -155,7 +155,7 @@
     <div id="collapseFour" class="accordion-collapse collapse" aria-labelledby="headingFour" data-bs-parent="#accordionExample">
         <div class="accordion-body">
             {% if pail_blends %}
-                <a href="/core/blendschedule/Pails">View Pails Schedule Page</a>
+                <a href="/core/blendschedule?blend_area=Pails">View Pails Schedule Page</a>
                 <div class="table-responsive-sm">
                     <table class="table text-left table-bordered">
                         <thead class="thead-dark">
@@ -202,7 +202,7 @@
     <div id="collapseFive" class="accordion-collapse collapse show" aria-labelledby="headingFive" data-bs-parent="#accordionExample">
     <div class="accordion-body">
         {% if desk_one_blends %}
-            <a href="/core/blendschedule/Desk_1">View Desk 1 Schedule Page</a>
+            <a href="/core/blendschedule?blend_area=Desk_1">View Desk 1 Schedule Page</a>
             <div class="table-responsive-sm">
                 <table class="table text-left table-bordered">
                     <thead class="thead-dark">
@@ -264,7 +264,7 @@
     <div id="collapseSix" class="accordion-collapse collapse" aria-labelledby="headingSix" data-bs-parent="#accordionExample">
     <div class="accordion-body">
         {% if desk_two_blends %}
-            <a href="/core/blendschedule/Desk_2">View Desk 2 Schedule Page</a>
+            <a href="/core/blendschedule?blend_area=Desk_2">View Desk 2 Schedule Page</a>
             <div class="table-responsive-sm">
                 <table class="table text-left table-bordered">
                     <thead class="thead-dark">
