--- a/app/core/templates/core/blendschedules/desktwoschedule.html
+++ b/app/core/templates/core/blendschedules/desktwoschedule.html
@@ -3,9 +3,9 @@
     <br>
     <p>{{ today|date:"m/d/y" }}</p>
     <div class="noPrint">
-        <a href="/core/blendschedule/Desk_1">View Desk 1 Schedule</a>
+        <a href="/core/blendschedule?blend_area=Desk_1">View Desk 1 Schedule</a>
         -- 
-        <a href="/core/blendschedule/all">View All Schedules</a>
+        <a href="/core/blendschedule?blend_area=all">View All Schedules</a>
     </div>
     <br>
 </div>
