--- a/app/core/templates/core/blendshortages.html
+++ b/app/core/templates/core/blendshortages.html
@@ -109,7 +109,7 @@
                         {% if item.schedule_value == "Not Scheduled" %}
                             Not Scheduled
                         {% else %}
-                            <a href="/core/blendschedule/{{ item.schedule_value }}">{{ item.schedule_value }}</td>
+                            <a href="/core/blendschedule?blend_area={{ item.schedule_value }}">{{ item.schedule_value }}</td>
                         {% endif %}
                 </tr>
             {% endfor %}
