--- a/app/templates/navbars/admin-navbar-items.html
+++ b/app/templates/navbars/admin-navbar-items.html
@@ -32,7 +32,7 @@
         <li><a class="dropdown-item" href="/core/blendstatistics">Blend Statistics</a></li>
         <li><a class="dropdown-item" href="/core/reports">Misc. Reports</a></li>
         <li><hr class="dropdown-divider"></li>
-        <li><a class="dropdown-item" href="/core/blendschedule/all">Scheduled Blends</a></li>
+        <li><a class="dropdown-item" href="/core/blendschedule?blend_area=all">Scheduled Blends</a></li>
     </ul>
 </li>
 <li class="nav-item">
