--- a/app/templates/navbars/blend-crew-navbar-items.html
+++ b/app/templates/navbars/blend-crew-navbar-items.html
@@ -18,7 +18,7 @@
         <li><a class="dropdown-item" href="/core/blendcountsheets">Blend Count Sheets</a></li>
         <li><a class="dropdown-item" href="/core/reports">Misc. Reports</a></li>
         <li><hr class="dropdown-divider"></li>
-        <li><a class="dropdown-item" href="/core/blendschedule/all">Scheduled Blends</a></li>
+        <li><a class="dropdown-item" href="/core/blendschedule?blend_area=all">Scheduled Blends</a></li>
     </ul>
 </li>
 <li class="nav-item">
