Update the workings of new lot number submission.

--- a/app/core/templates/core/modals/add-lotnum-modal.html
+++ b/app/core/templates/core/modals/add-lotnum-modal.html
@@ -12,7 +12,7 @@
             {% if submitted %}
                 <a href='/core/lotnumrecords'>View All Lot Numbers</a>
             {% else %}
-                <form action="/core/addlotnumrecord/lotnumrecords" method=POST>
+                <form action="/core/addlotnumrecord/lotnumrecords" method=POST id="addLotNumFormElement">
                     {% csrf_token %}
                     <table id="lotnumformtable">
                         {{ lot_form }}
