--- a/app/core/templates/core/lotnumrecords.html
+++ b/app/core/templates/core/lotnumrecords.html
@@ -107,20 +107,20 @@
                         <td class="text-center">
                             {% if item.sage_entered_date %}
                                 Blended
-                            {% elif item.schedule_value == "Not Scheduled" %}
+                            {% else %}
                                 <div class="dropdown">
-                                    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">Unscheduled</button>
+                                    <button class="btn btn-secondary dropdown-toggle" type="button" id="dropdownMenuButton1" data-bs-toggle="dropdown" aria-expanded="false">
+                                        {{ item.schedule_value }}
+                                    </button>
                                     <ul class="dropdown-menu" aria-labelledby="dropdownMenuButton1">
-                                        <li><a class="dropdown-item addToScheduleLink" data-bs-toggle="modal" data-itemcode="{{ item.item_code }}" data-desc="{{ item.item_description }}" data-lotnum="{{ item.lot_number }}" data-lotqty="{{ item.lot_quantity }}"   data-line="{{ item.line }}" data-blendDesk="{{item.desk}}" data-bs-target="#addToScheduleModal">
-                                            Assign to {{ item.desk }}
-                                        </a></li>
-                                        <li><a class="dropdown-item" dataItemID="{{ item.id }}" href="/core/lotnumrecords/?edit_yesno=yes&lot_id={{ item.id }}">
-                                            Change Desk
-                                        </a></li>
+                                        <li><a class="dropdown-item" href="/core/blendschedule?blend_area={{ item.schedule_value }}">View {{ item.schedule_value }} Schedule</a></li>
+                                        {% if item.schedule_value == "Desk_1" %}
+                                            <li><a class="dropdown-item" href="/core/mngReq/switchschedules/{{ item.schedule_value }}/{{ item.schedule_id }}/{{ item.schedule_order }}">Switch To Desk_2</a></li>
+                                        {% elif item.schedule_value == "Desk_2" %}
+                                            <li><a class="dropdown-item" href="/core/mngReq/switchschedules/{{ item.schedule_value }}/{{ item.schedule_id }}/{{ item.schedule_order }}">Switch To Desk_1</a></li>
+                                        {% endif %}
                                     </ul>
                                 </div>
-                            {% else %}
-                                <b><a href="/core/blendschedule?blend_area={{ item.schedule_value }}">{{ item.schedule_value }}</a></b>
                             {% endif %}
                         </td>
                         <td style="display:flex;">
