Correct reference to addcountlist modal.

--- a/app/core/templates/core/inventorycounts/countlist.html
+++ b/app/core/templates/core/inventorycounts/countlist.html
@@ -57,7 +57,7 @@
         <div id="encodedListDiv" encoded-list="{{ encoded_list }}"></div>
     {% endif %}
         <div id="addBlendButtonContainer" class="buttonContainer">
-            <button id="modalToggle" type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#addBlendModal">
+            <button id="modalToggle" type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#addCountListItemModal">
                 Add A Blend
             </button>
         </div>
