Add b64 encoding to all inforequest functions.

--- a/app/core/templates/core/lookuppages/lookupitemquantity.html
+++ b/app/core/templates/core/lookuppages/lookupitemquantity.html
@@ -60,5 +60,5 @@
   {% endblock content %}
 <!-- End Body -->
 {% block belowdeckscripts %}
-    <script src="{% static 'prodverse/js/itemQtyLookup.js' %}"></script>
+    <script type="module" src="{% static 'core/js/pageModules/itemQuantityLookup.js' %}"></script>
 {% endblock %}
