Declare variables in tankLevels.js as needed.

--- a/app/core/templates/core/tanklevels.html
+++ b/app/core/templates/core/tanklevels.html
@@ -37,7 +37,5 @@
         </table>
     </div>
     <p id="hartPage" hidden=true></p>
-    <script src="{% static 'core/js/tankLevels.js' %}"></script>
+    <script type="module" src="{% static 'core/js/pageModules/tankLevels.js' %}"></script>
   {% endblock content %}
-
-
