--- a/app/templates/navbars/all-users-navbar-items.html
+++ b/app/templates/navbars/all-users-navbar-items.html
@@ -6,7 +6,7 @@
         Item Lookup
     </a>
     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-    <li><a class="dropdown-item" href="/prodverse/lookupitem/">Item Quantity</a></li>
+    <li><a class="dropdown-item" href="/core/lookupitemquantity/">Item Quantity</a></li>
     <li><a class="dropdown-item" href="/core/lookuplocation/">Chemical Location</a></li>
     <li><a class="dropdown-item" href="/core/lookuplotnum/">Lot Numbers</a></li>
     </ul>
