Rename stylesheets to match html template names.

--- a/app/core/templates/core/forkliftchecklist.html
+++ b/app/core/templates/core/forkliftchecklist.html
@@ -4,7 +4,7 @@
 {% block title %}<title>Forklift Checklist</title>{% endblock %}
 
 {% block viewport %}<meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no"/>{% endblock %}
-{% block scripts%} <link rel="stylesheet" type="text/css" href="{% static 'core/css/userforms.css' %}">{% endblock%}
+{% block scripts%} <link rel="stylesheet" type="text/css" href="{% static 'core/css/forkliftChecklist.css' %}">{% endblock%}
 
 
 {% block content %}
