--- a/app/core/templates/core/lookuppages/lookuplotnums.html
+++ b/app/core/templates/core/lookuppages/lookuplotnums.html
@@ -7,7 +7,7 @@
 {% block scripts %} 
     <link rel="shortcut icon" type="image/png" href="{% static 'core\kpkhomescrico.png' %}">
     <link rel="apple-touch-icon" href="{% static 'core\kpkhomescrico.png' %}">
-    <link rel="stylesheet" type="text/css" href="{% static 'core/css/lotNumLookup.css' %}">
+    <link rel="stylesheet" type="text/css" href="{% static 'core/css/lookupLotNum.css' %}">
 {% endblock scripts %}
 
 
