--- a/app/core/templates/core/modals/add-scheduleitem-modal.html
+++ b/app/core/templates/core/modals/add-scheduleitem-modal.html
@@ -1,5 +1,5 @@
 {% load static %}
-<link rel="stylesheet" type="text/css" href="{% static 'core/css/addLotToSchedule.css' %}">
+{% comment %} <link rel="stylesheet" type="text/css" href="{% static 'core/css/addLotToSchedule.css' %}"> {% endcomment %}
  
 <div class="modal fade" id="addToScheduleModal" tabindex="-1" aria-labelledby="addToScheduleModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered">
