--- a/app/core/templates/core/modals/edit-lotnum-modal.html
+++ b/app/core/templates/core/modals/edit-lotnum-modal.html
@@ -1,5 +1,5 @@
 {% load static %}
-<link rel="stylesheet" type="text/css" href="{% static 'core/css/lotNumModal.css' %}">
+<link rel="stylesheet" type="text/css" href="{% static 'core/css/editLotNumModal.css' %}">
  
 <div class="modal fade" id="editLotNumModal" tabindex="-1" aria-labelledby="editLotNumModalLabel" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered">
@@ -15,7 +15,7 @@
                 <form action="{% url 'update-lot-num-record' lot_id %}" method=POST>
                     {% csrf_token %}
                     <table id="lotnumformtable">
-                        {{ lot_form }}
+                        {{ edit_lot_form }}
                     </table>
                     <div class="modal-footer">
                         <a href='/core/lotnumrecords'>
