Set up a new buttonobject for the finishedcountsreport.

--- a/app/core/templates/core/inventorycounts/countlist.html
+++ b/app/core/templates/core/inventorycounts/countlist.html
@@ -56,7 +56,7 @@
         </br>
         <div id="encodedListDiv" encoded-list="{{ encoded_list }}"></div>
     {% endif %}
-        <div id="addBlendButtonContainer" class="buttonContainer">
+        <div id="addBlendButtonContainer" class="buttonContainer noPrint">
             <button id="modalToggle" type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#addCountListItemModal">
                 Add A Blend
             </button>
