--- a/app/core/templates/core/inventorycounts/finishedcounts.html
+++ b/app/core/templates/core/inventorycounts/finishedcounts.html
@@ -42,5 +42,5 @@
 {% endblock content %}
 
 {% block belowdeckscripts %}
-    <script src="{% static 'core/js/finishedCounts.js' %}"></script>
+    <script src="{% static 'core/js/pageModules/finishedCounts.js' %}"></script>
 {% endblock %}
