Final styling updates to maxProducibleQuantity.

--- a/app/core/templates/core/maxproduciblequantity.html
+++ b/app/core/templates/core/maxproduciblequantity.html
@@ -26,7 +26,7 @@
                             <th scope="col" class='text-center'>Blend Shortage Description</th>
                             <th scope="col" class='text-center'>Quantity Short</th>
                             <th scope="col" class='text-center'>When Short</th>
-                            <th scope="col" class='text-center'>Component Quantity Used</th>
+                            <th scope="col" class='text-center' id="component_quantity_header">Quantity Used</th>
                         </tr>
                     </thead>
                     <tbody id="limiting_factor_usage_tbody">
@@ -36,7 +36,7 @@
             </div>
                         
 
-            <h2>Next Shipment:</h2>
+            <h2 id="next_shipment_header">Next Shipment:</h2>
             <div><p id="next_shipment"></p></div>
         </div>
 
